v3.2.4 return the Welcome view to be seen only once